--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 PORT = 4000
 
 MONGODB = mongodb+srv://ecommerce:J5CENExFRlWCEl7b@cluster0.dtdhp.mongodb.net/ecommerce?retryWrites=true&w=majority
+
+
+SECRETKEY = TANVIR
